--- a/mockup/src/App.css
+++ b/mockup/src/App.css
@@ -4,4 +4,10 @@
   box-sizing: border-box;
   height: 100%;
   min-height: 100vh;
+  display: flex;
+}
+
+.app__header {
+  align-self: start;
+  width: 100%;
 }
