--- a/mockup/src/components/Menu/Menu.css
+++ b/mockup/src/components/Menu/Menu.css
@@ -6,6 +6,15 @@
   width: 70px;
   overflow: hidden;
   transition: 0.3s linear;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-style: normal;
+  font-weight: normal;
+  color: black;
+  height: 100vh;
+  position: sticky;
+  top: 0;
 }
 
 .menu:hover {
@@ -46,6 +55,7 @@
   text-decoration: none;
   opacity: 1;
   transition: 0.3s linear;
+  color: black;
 }
 
 .menu__link:hover {
